src/test/deca/context/valid/lvalue_selection_protected/access_protected_field_without_this.deca
// Test of rule (3.66) : 

class Vehicule {
  protected int nombreRoues = 4;
}

class Moto extends Vehicule {
  void setNombreRoues(int n) {
    Vehicule v = new Vehicule();
    nombreRoues = 2;
    println(nombreRoues);
  }
}

