src/test/deca/context/invalid/expr_cast_Object_to_int.deca
// Test of the rule (3.39) : can't cast Object to int.

{
	int var1;
	Object var2;
	var1 = (int)(var2);
}

// Résultat :
//# a
